@@ -1,3 +1,8 @@
+2009-07-26  Larry Ewing  <lewing@novell.com>
+
+	* ComboBox.cs: use the new popup hack to handle the popup
+	positioning.  Fixes DRT #556.
+
 2009-07-23  Jeffrey Stedfast  <fejj@novell.com>
 
 	* TextBox.cs (OnCursorPositionChanged): Added some special logic
